test: 사용자 골룸 단일 조회 통합 테스트