@@ -2,6 +2,7 @@ package co.kirikiri.integration;
 
 import static io.restassured.RestAssured.given;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertAll;
 
 import co.kirikiri.domain.goalroom.GoalRoom;
 import co.kirikiri.domain.goalroom.GoalRoomPendingMember;
@@ -9,6 +10,7 @@ import co.kirikiri.domain.goalroom.GoalRoomRoadmapNode;
 import co.kirikiri.domain.goalroom.GoalRoomRoadmapNodes;
 import co.kirikiri.domain.goalroom.GoalRoomRole;
 import co.kirikiri.domain.goalroom.GoalRoomStatus;
+import co.kirikiri.domain.goalroom.GoalRoomToDo;
 import co.kirikiri.domain.goalroom.LimitedMemberCount;
 import co.kirikiri.domain.member.EncryptedPassword;
 import co.kirikiri.domain.member.Gender;
@@ -28,10 +30,14 @@ import co.kirikiri.persistence.roadmap.RoadmapCategoryRepository;
 import co.kirikiri.persistence.roadmap.RoadmapContentRepository;
 import co.kirikiri.persistence.roadmap.RoadmapNodeRepository;
 import co.kirikiri.persistence.roadmap.RoadmapRepository;
+import co.kirikiri.service.dto.ErrorResponse;
 import co.kirikiri.service.dto.PageResponse;
 import co.kirikiri.service.dto.auth.request.LoginRequest;
 import co.kirikiri.service.dto.auth.response.AuthenticationResponse;
 import co.kirikiri.service.dto.goalroom.response.GoalRoomForListResponse;
+import co.kirikiri.service.dto.goalroom.response.GoalRoomNodeResponse;
+import co.kirikiri.service.dto.goalroom.response.GoalRoomResponse;
+import co.kirikiri.service.dto.goalroom.response.GoalRoomTodoResponse;
 import co.kirikiri.service.dto.member.request.GenderType;
 import co.kirikiri.service.dto.member.request.MemberJoinRequest;
 import co.kirikiri.service.dto.member.response.MemberResponse;
@@ -44,9 +50,11 @@ import io.restassured.response.ExtractableResponse;
 import io.restassured.response.Response;
 import java.io.UnsupportedEncodingException;
 import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 
 @SuppressWarnings("NonAsciiCharacters")
@@ -74,32 +82,118 @@ class GoalRoomReadIntegrationTest extends IntegrationTest {
     }
 
     @Test
-    void 사용자가_참여한_골룸_목록을_조회한다() throws UnsupportedEncodingException, JsonProcessingException {
+    void 사용자가_참여한_단일_골룸을_조회한다() throws UnsupportedEncodingException, JsonProcessingException {
+        //given
         final Member member = 사용자를_생성한다("황시진", "010-1234-5678", "identifier1", "password1!");
         final String 토큰 = 로그인을_한다("identifier1", "password1!");
 
         final RoadmapCategory 카테고리 = 로드맵_카테고리를_저장한다("운동");
         final RoadmapNodeSaveRequest 노드1 = 로드맵_노드_요청값을_생성한다("로드맵 1주차", "로드맵 1주차 내용");
         final RoadmapNodeSaveRequest 노드2 = 로드맵_노드_요청값을_생성한다("로드맵 2주차", "로드맵 2주차 내용");
-        final Long 로드맵_아이디 = 로드맵을_생성한다(토큰, 카테고리.getId(), "로드맵 제목", "로드맵 소개글", "로드맵 본문",
-                RoadmapDifficultyType.DIFFICULT, 30, List.of(노드1, 노드2));
+        final Long 로드맵_아이디 = 로드맵을_생성한다(토큰, 카테고리.getId(), "로드맵 제목", "로드맵 소개글", "로드맵 본문", RoadmapDifficultyType.DIFFICULT,
+                30, List.of(노드1, 노드2));
         final RoadmapContent 로드맵_본문 = 로드맵으로부터_본문을_가져온다(로드맵_아이디);
         final List<RoadmapNode> 로드맵_노드들 = 로드맵_본문으로부터_노드들을_가져온다(로드맵_본문);
 
         // TODO: 골룸 생성 API 추가 시 수정
-        final GoalRoomRoadmapNode 골룸_로드맵_노드1 = 골룸_로드맵_노드를_생성한다(LocalDate.of(2023, 7, 1),
-                LocalDate.of(2023, 7, 8), 로드맵_노드들.get(0));
-        final GoalRoomRoadmapNode 골룸_로드맵_노드2 = 골룸_로드맵_노드를_생성한다(LocalDate.of(2023, 7, 9),
-                LocalDate.of(2023, 7, 16), 로드맵_노드들.get(1));
-        final GoalRoom 골룸1 = 골룸을_생성한다("goalroom1", 6, GoalRoomStatus.RECRUITING, 로드맵_본문,
-                new GoalRoomRoadmapNodes(List.of(골룸_로드맵_노드1, 골룸_로드맵_노드2)), member);
+        final GoalRoomRoadmapNode 골룸_로드맵_노드1 = 골룸_로드맵_노드를_생성한다(LocalDate.of(2023, 7, 1), LocalDate.of(2023, 7, 8),
+                로드맵_노드들.get(0));
+        final GoalRoomRoadmapNode 골룸_로드맵_노드2 = 골룸_로드맵_노드를_생성한다(LocalDate.of(2023, 7, 9), LocalDate.of(2023, 7, 16),
+                로드맵_노드들.get(1));
+        final GoalRoomToDo 첫_번째_투두 = new GoalRoomToDo("첫번째 투두", LocalDate.of(2023, 7, 1), LocalDate.of(2023, 7, 10));
+        final GoalRoomToDo 두_번째_투두 = new GoalRoomToDo("두번째 투두", LocalDate.of(2023, 7, 11), LocalDate.of(2023, 7, 20));
+        final GoalRoom 골룸 = 골룸을_생성한다("goalroom1", 6, GoalRoomStatus.RECRUITING, 로드맵_본문,
+                new GoalRoomRoadmapNodes(List.of(골룸_로드맵_노드1, 골룸_로드맵_노드2)), List.of(첫_번째_투두, 두_번째_투두), member);
 
-        final GoalRoomRoadmapNode 골룸_로드맵_노드3 = 골룸_로드맵_노드를_생성한다(LocalDate.of(2023, 6, 30),
-                LocalDate.of(2023, 7, 8), 로드맵_노드들.get(0));
-        final GoalRoomRoadmapNode 골룸_로드맵_노드4 = 골룸_로드맵_노드를_생성한다(LocalDate.of(2023, 7, 9),
-                LocalDate.of(2023, 7, 30), 로드맵_노드들.get(1));
+        final GoalRoomResponse 사용자_단일_골룸_조회_예상_응답값 = new GoalRoomResponse(골룸.getName(), "로드맵 제목", 골룸.getStatus().name(),
+                List.of(new GoalRoomNodeResponse(골룸_로드맵_노드1.getRoadmapNode().getTitle(), 골룸_로드맵_노드1.getStartDate(),
+                                골룸_로드맵_노드1.getEndDate(), 0),
+                        new GoalRoomNodeResponse(골룸_로드맵_노드2.getRoadmapNode().getTitle(), 골룸_로드맵_노드2.getStartDate(),
+                                골룸_로드맵_노드2.getEndDate(), 0)),
+                List.of(new GoalRoomTodoResponse(첫_번째_투두.getContent(), 첫_번째_투두.getStartDate(), 첫_번째_투두.getEndDate()),
+                        new GoalRoomTodoResponse(두_번째_투두.getContent(), 두_번째_투두.getStartDate(), 두_번째_투두.getEndDate())),
+                16, null);
+
+        //when
+        final ExtractableResponse<Response> 사용자_단일_골룸_조회_응답 = 사용자_단일_골룸을_조회한다(토큰, member.getId(), 골룸.getId());
+
+        //then
+        final GoalRoomResponse 사용자_단일_골룸_조회_응답값 = jsonToClass(사용자_단일_골룸_조회_응답.asString(), new TypeReference<>() {
+        });
+
+        assertThat(사용자_단일_골룸_조회_응답값).isEqualTo(사용자_단일_골룸_조회_예상_응답값);
+    }
+
+    @Test
+    void 사용자가_참여하지_않은_단일_골룸_조회를_요청하면_예외가_발생한다() throws UnsupportedEncodingException, JsonProcessingException {
+        //given
+        final Member 크리에이터 = 사용자를_생성한다("황시진", "010-1234-5678", "identifier1", "password1!");
+        final String 크리에이터_토큰 = 로그인을_한다("identifier1", "password1!");
+
+        final RoadmapCategory 카테고리 = 로드맵_카테고리를_저장한다("운동");
+        final RoadmapNodeSaveRequest 노드1 = 로드맵_노드_요청값을_생성한다("로드맵 1주차", "로드맵 1주차 내용");
+        final RoadmapNodeSaveRequest 노드2 = 로드맵_노드_요청값을_생성한다("로드맵 2주차", "로드맵 2주차 내용");
+        final Long 로드맵_아이디 = 로드맵을_생성한다(크리에이터_토큰, 카테고리.getId(), "로드맵 제목", "로드맵 소개글", "로드맵 본문",
+                RoadmapDifficultyType.DIFFICULT,
+                30, List.of(노드1, 노드2));
+        final RoadmapContent 로드맵_본문 = 로드맵으로부터_본문을_가져온다(로드맵_아이디);
+        final List<RoadmapNode> 로드맵_노드들 = 로드맵_본문으로부터_노드들을_가져온다(로드맵_본문);
+
+        // TODO: 골룸 생성 API 추가 시 수정
+        final GoalRoomRoadmapNode 골룸_로드맵_노드1 = 골룸_로드맵_노드를_생성한다(LocalDate.of(2023, 7, 1), LocalDate.of(2023, 7, 8),
+                로드맵_노드들.get(0));
+        final GoalRoomRoadmapNode 골룸_로드맵_노드2 = 골룸_로드맵_노드를_생성한다(LocalDate.of(2023, 7, 9), LocalDate.of(2023, 7, 16),
+                로드맵_노드들.get(1));
+        final GoalRoomToDo 첫_번째_투두 = new GoalRoomToDo("첫번째 투두", LocalDate.of(2023, 7, 1), LocalDate.of(2023, 7, 10));
+        final GoalRoomToDo 두_번째_투두 = new GoalRoomToDo("두번째 투두", LocalDate.of(2023, 7, 11), LocalDate.of(2023, 7, 20));
+        final GoalRoom 골룸 = 골룸을_생성한다("goalroom1", 6, GoalRoomStatus.RECRUITING, 로드맵_본문,
+                new GoalRoomRoadmapNodes(List.of(골룸_로드맵_노드1, 골룸_로드맵_노드2)), List.of(첫_번째_투두, 두_번째_투두), 크리에이터);
+
+        final Member 사용자 = 사용자를_생성한다("사용자", "010-2222-1234", "identifier2", "password2@");
+        final String 사용자_토큰 = 로그인을_한다("identifier2", "password2@");
+
+        final ErrorResponse 사용자_단일_골룸_조회_예상_응답값 = new ErrorResponse("참여하지 않은 골룸입니다.");
+
+        //when
+        final ExtractableResponse<Response> 사용자_단일_골룸_조회_응답 = 사용자_단일_골룸을_조회한다(사용자_토큰, 사용자.getId(), 골룸.getId());
+
+        //then
+        final ErrorResponse 사용자_단일_골룸_조회_응답값 = objectMapper.readValue(사용자_단일_골룸_조회_응답.asString(),
+                new TypeReference<>() {
+                });
+
+        assertAll(
+                () -> assertThat(사용자_단일_골룸_조회_응답.statusCode()).isEqualTo(HttpStatus.BAD_REQUEST.value()),
+                () -> assertThat(사용자_단일_골룸_조회_응답값).isEqualTo(사용자_단일_골룸_조회_예상_응답값)
+        );
+    }
+
+    @Test
+    void 사용자가_참여한_골룸_목록을_조회한다() throws UnsupportedEncodingException, JsonProcessingException {
+        final Member member = 사용자를_생성한다("황시진", "010-1234-5678", "identifier1", "password1!");
+        final String 토큰 = 로그인을_한다("identifier1", "password1!");
+        final RoadmapCategory 카테고리 = 로드맵_카테고리를_저장한다("운동");
+        final RoadmapNodeSaveRequest 노드1 = 로드맵_노드_요청값을_생성한다("로드맵 1주차", "로드맵 1주차 내용");
+        final RoadmapNodeSaveRequest 노드2 = 로드맵_노드_요청값을_생성한다("로드맵 2주차", "로드맵 2주차 내용");
+        final Long 로드맵_아이디 = 로드맵을_생성한다(토큰, 카테고리.getId(), "로드맵 제목", "로드맵 소개글", "로드맵 본문", RoadmapDifficultyType.DIFFICULT,
+                30, List.of(노드1, 노드2));
+        final RoadmapContent 로드맵_본문 = 로드맵으로부터_본문을_가져온다(로드맵_아이디);
+        final List<RoadmapNode> 로드맵_노드들 = 로드맵_본문으로부터_노드들을_가져온다(로드맵_본문);
+
+        // TODO: 골룸 생성 API 추가 시 수정
+        final GoalRoomRoadmapNode 골룸_로드맵_노드1 = 골룸_로드맵_노드를_생성한다(LocalDate.of(2023, 7, 1), LocalDate.of(2023, 7, 8),
+                로드맵_노드들.get(0));
+        final GoalRoomRoadmapNode 골룸_로드맵_노드2 = 골룸_로드맵_노드를_생성한다(LocalDate.of(2023, 7, 9), LocalDate.of(2023, 7, 16),
+                로드맵_노드들.get(1));
+        final GoalRoom 골룸1 = 골룸을_생성한다("goalroom1", 6, GoalRoomStatus.RECRUITING, 로드맵_본문,
+                new GoalRoomRoadmapNodes(List.of(골룸_로드맵_노드1, 골룸_로드맵_노드2)), Collections.emptyList(), member);
+
+        final GoalRoomRoadmapNode 골룸_로드맵_노드3 = 골룸_로드맵_노드를_생성한다(LocalDate.of(2023, 6, 30), LocalDate.of(2023, 7, 8),
+                로드맵_노드들.get(0));
+        final GoalRoomRoadmapNode 골룸_로드맵_노드4 = 골룸_로드맵_노드를_생성한다(LocalDate.of(2023, 7, 9), LocalDate.of(2023, 7, 30),
+                로드맵_노드들.get(1));
         final GoalRoom 골룸2 = 골룸을_생성한다("goalroom2", 20, GoalRoomStatus.RUNNING, 로드맵_본문,
-                new GoalRoomRoadmapNodes(List.of(골룸_로드맵_노드3, 골룸_로드맵_노드4)), member);
+                new GoalRoomRoadmapNodes(List.of(골룸_로드맵_노드3, 골룸_로드맵_노드4)), Collections.emptyList(), member);
 
         final GoalRoomForListResponse 골룸1_예상_응답값 = new GoalRoomForListResponse(1L, 골룸1.getName(),
                 골룸1.getCurrentMemberCount(), 골룸1.getLimitedMemberCount(), 골룸1.getCreatedAt(),
@@ -121,8 +215,7 @@ class GoalRoomReadIntegrationTest extends IntegrationTest {
                 new TypeReference<>() {
                 });
 
-        assertThat(사용자_골룸_목록_조회_응답값).usingRecursiveComparison()
-                .ignoringFields("data.createdAt")
+        assertThat(사용자_골룸_목록_조회_응답값).usingRecursiveComparison().ignoringFields("data.createdAt")
                 .isEqualTo(사용자_골룸_목록_조회_예상_응답값);
     }
 
@@ -143,20 +236,15 @@ class GoalRoomReadIntegrationTest extends IntegrationTest {
         assertThat(사용자_골룸_목록_조회_응답값.data()).isEmpty();
     }
 
-    private void 회원가입을_한다(final String 아이디, final String 비밀번호, final String 닉네임, final String 전화번호,
-                          final GenderType 성별, final LocalDate 생년월일) {
+    private void 회원가입을_한다(final String 아이디, final String 비밀번호, final String 닉네임, final String 전화번호, final GenderType 성별,
+                          final LocalDate 생년월일) {
         final MemberJoinRequest 회원가입_요청값 = new MemberJoinRequest(아이디, 비밀번호, 닉네임, 전화번호, 성별, 생년월일);
         회원가입_요청(회원가입_요청값);
     }
 
     private ExtractableResponse<Response> 회원가입_요청(final MemberJoinRequest 회원가입_요청값) {
-        return given().log().all()
-                .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .when()
-                .body(회원가입_요청값)
-                .post(API_PREFIX + "/members/join")
-                .then().log().all()
-                .extract();
+        return given().log().all().contentType(MediaType.APPLICATION_JSON_VALUE).when().body(회원가입_요청값)
+                .post(API_PREFIX + "/members/join").then().log().all().extract();
     }
 
     private String 로그인을_한다(final String 아이디, final String 비밀번호)
@@ -167,13 +255,8 @@ class GoalRoomReadIntegrationTest extends IntegrationTest {
     }
 
     private ExtractableResponse<Response> 로그인_요청(final LoginRequest 로그인_요청값) {
-        return given().log().all()
-                .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .when()
-                .body(로그인_요청값)
-                .post(API_PREFIX + "/auth/login")
-                .then().log().all()
-                .extract();
+        return given().log().all().contentType(MediaType.APPLICATION_JSON_VALUE).when().body(로그인_요청값)
+                .post(API_PREFIX + "/auth/login").then().log().all().extract();
     }
 
     private String access_token을_받는다(final ExtractableResponse<Response> 로그인_응답)
@@ -193,11 +276,10 @@ class GoalRoomReadIntegrationTest extends IntegrationTest {
     }
 
     private Long 로드맵을_생성한다(final String 토큰, final Long 카테고리_아이디, final String 로드맵_제목, final String 로드맵_소개글,
-                           final String 로드맵_본문,
-                           final RoadmapDifficultyType 난이도, final int 추천_소요_기간,
+                           final String 로드맵_본문, final RoadmapDifficultyType 난이도, final int 추천_소요_기간,
                            final List<RoadmapNodeSaveRequest> 로드맵_노드들) {
-        final RoadmapSaveRequest 로드맵_생성_요청값 = new RoadmapSaveRequest(카테고리_아이디, 로드맵_제목, 로드맵_소개글, 로드맵_본문,
-                난이도, 추천_소요_기간, 로드맵_노드들);
+        final RoadmapSaveRequest 로드맵_생성_요청값 = new RoadmapSaveRequest(카테고리_아이디, 로드맵_제목, 로드맵_소개글, 로드맵_본문, 난이도, 추천_소요_기간,
+                로드맵_노드들);
         final ExtractableResponse<Response> 로드맵_생성_응답값 = 로드맵_생성_요청(로드맵_생성_요청값, 토큰);
         return 아이디를_반환한다(로드맵_생성_응답값);
     }
@@ -212,13 +294,9 @@ class GoalRoomReadIntegrationTest extends IntegrationTest {
     }
 
     private ExtractableResponse<Response> 로드맵_생성_요청(final RoadmapSaveRequest 로드맵_생성_요청값, final String accessToken) {
-        return given().log().all()
-                .header(HttpHeaders.AUTHORIZATION, "Bearer " + accessToken)
-                .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .body(로드맵_생성_요청값).log().all()
-                .post(API_PREFIX + "/roadmaps")
-                .then().log().all()
-                .extract();
+        return given().log().all().header(HttpHeaders.AUTHORIZATION, "Bearer " + accessToken)
+                .contentType(MediaType.APPLICATION_JSON_VALUE).body(로드맵_생성_요청값).log().all()
+                .post(API_PREFIX + "/roadmaps").then().log().all().extract();
     }
 
     private Long 아이디를_반환한다(final ExtractableResponse<Response> 응답) {
@@ -230,12 +308,13 @@ class GoalRoomReadIntegrationTest extends IntegrationTest {
         return new GoalRoomRoadmapNode(startDate, endDate, roadmapNode);
     }
 
-    private GoalRoom 골룸을_생성한다(final String name, final Integer limitedMemberCount,
-                              final GoalRoomStatus status, final RoadmapContent roadmapContent,
-                              final GoalRoomRoadmapNodes goalRoomRoadmapNodes, final Member creator) {
+    private GoalRoom 골룸을_생성한다(final String name, final Integer limitedMemberCount, final GoalRoomStatus status,
+                              final RoadmapContent roadmapContent, final GoalRoomRoadmapNodes goalRoomRoadmapNodes,
+                              final List<GoalRoomToDo> goalRoomTodos, final Member creator) {
         final GoalRoom goalRoom = new GoalRoom(name, new LimitedMemberCount(limitedMemberCount), roadmapContent,
                 new GoalRoomPendingMember(creator, GoalRoomRole.LEADER));
         goalRoom.addRoadmapNodesAll(goalRoomRoadmapNodes);
+        goalRoomTodos.forEach(goalRoom::addGoalRoomTodo);
         goalRoom.updateStatus(status);
         goalRoomRepository.save(goalRoom);
         return goalRoom;
@@ -245,22 +324,22 @@ class GoalRoomReadIntegrationTest extends IntegrationTest {
                              final String password) {
         final MemberProfile memberProfile = new MemberProfile(Gender.MALE, LocalDate.of(1990, 1, 1),
                 new Nickname(nickname), phoneNumber);
-        final Member creator = new Member(new Identifier(identifier),
-                new EncryptedPassword(new Password(password)), memberProfile);
+        final Member creator = new Member(new Identifier(identifier), new EncryptedPassword(new Password(password)),
+                memberProfile);
         return memberRepository.save(creator);
+    }
+
+    private ExtractableResponse<Response> 사용자_단일_골룸을_조회한다(final String accessToken, final Long memberId,
+                                                          final Long goalRoomId) {
+        return given().log().all().contentType(MediaType.APPLICATION_JSON_VALUE)
+                .header(AUTHORIZATION, "Bearer " + accessToken).param("member", memberId).when()
+                .get(API_PREFIX + "/goal-rooms/{goalRoomId}", goalRoomId).then().log().all().extract();
     }
 
     private ExtractableResponse<Response> 사용자_골룸_목록을_조회한다(final String accessToken, final Long memberId, final int page,
                                                           final int size) {
-        return given().log().all()
-                .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .header("Authorization", "Bearer " + accessToken)
-                .param("member", memberId)
-                .param("page", page)
-                .param("size", size)
-                .when()
-                .get(API_PREFIX + "/goal-rooms")
-                .then().log().all()
-                .extract();
+        return given().log().all().contentType(MediaType.APPLICATION_JSON_VALUE)
+                .header(AUTHORIZATION, "Bearer " + accessToken).param("member", memberId).param("page", page)
+                .param("size", size).when().get(API_PREFIX + "/goal-rooms").then().log().all().extract();
     }
 }
